[package]
authors = ["ustulation <ustulation@gmail.com>"]
description = "NAT Traversal for P2P communication"
documentation = "https://docs.rs/p2p/"
license = "GPL-3.0"
name = "p2p"
readme = "README.md"
repository = "https://github.com/ustulation/p2p"
version = "0.4.6"

[dependencies]
bincode = "~0.8.0"
byteorder = "~1.2.0"
log = "~0.3.7"
maidsafe_utilities = "~0.17.0"
mio = "~0.6.7"
net2 = "~0.2.29"
quick-error = "~1.2.0"
rand = "~0.3.15"
rust_sodium = "~0.10.0"
serde = "~1.0.2"
serde_derive = "~1.0.2"

[dev-dependencies]
env_logger = "~0.5.13"
serde_json = "~1.0.2"
unwrap = "~1.2.1"
